--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "@atproto/api": "^0.15.16",
+    "@supabase/supabase-js": "^2.50.0",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.2",
+    "socket.io": "^4.8.1"
   }
 }
