--- a/package.json
+++ b/package.json
@@ -9,5 +9,17 @@
     "express": "^5.1.0",
     "pg": "^8.16.2",
     "socket.io": "^4.8.1"
-  }
+  },
+  "name": "diasasters",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
